# DRFBooking

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: pull_request.yml
drf_booking/: .secrets.yaml.example  manage.py  settings.yaml
drf_booking/booking/: models.py  serializers.py  service.py  urls.py  views.py
drf_booking/booking/migrations/: 0001_initial.py
drf_booking/drf_booking/: settings.py  urls.py
drf_booking/room/: models.py  serializers.py  service.py  urls.py  views.py
drf_booking/room/migrations/: 0001_initial.py
scripts/: generate_env_from_dynaconf.py
src/: settings.yaml
src/booking/: models.py  serializers.py  service.py  urls.py  views.py
src/config/: settings.py  urls.py
src/room/: apps.py  dao.py  models.py  serializers.py  service.py  views.py
tests/: conftest.py
tests/booking/: booking_view_set_test.py
tests/room/: room_view_set_test.py
