[tool.poetry]
name = "drfbooking"
version = "0.1.0"
description = "Django DRF project"
authors = ["MaximBrezhnev <max.b04.03@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.2.4,<6.0.0"
djangorestframework = "^3.16.0"
dynaconf = {extras = ["yaml"], version = "^3.2.11"}
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"